# koopa

./: Cargo.toml  README.md  justfile
.github/workflows/: test.yml
.koopa/: basic.py  donotinclude.txt  du.vhd  shells.toml
.koopa/prj-cpp/: README.md  justfile  main.cpp
.koopa/prj-cpp/.koopa/: shells.toml
src/: config.rs  error.rs  filesys.rs  help.rs  koopa.rs  lib.rs  main.rs  shell.rs  var.rs
