[package]
name = "koopa"
description = "A copy/paste tool with superpowers"
repository = "https://github.com/chaseruskin/koopa"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "kp"
path = "./src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cliproc = "2.1"
colored = "2"
thiserror = "1.0"
ignore = "0.4"
home = "=0.5.9"
toml = "=0.8.14"
serde = { version = "1.0", features = ["derive"] }